--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pseudo Momentum</title>
-
     <link rel="stylesheet" href="style.css">
+    <title>Pseudo Momentum</title>
   </head>
   <body>
+    <div id="login-form">
+      <input type="text" placeholder="What is your name?" />
+      <button>Log In</button>
+    </div>
     <script src="app.js"></script>
-    
   </body>
 </html>
