Practicing event.preventDefault()

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Pseudo Momentum</title>
   </head>
   <body>
-    <div id="login-form">
+    <form id="login-form">
       <input type="text" placeholder="What is your name?" />
-      <button>Log In</button>
-    </div>
+      <input type="submit" value="Log In" />
+    </form>
+    <a id="link" href="https://twitter.com/kumankoishi">kumankoishi</a>
     <script src="app.js"></script>
   </body>
 </html>
