--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <input type="text" placeholder="What is your name?" />
       <input type="submit" value="Log In" />
     </form>
-    <a id="link" href="https://twitter.com/kumankoishi">kumankoishi</a>
+    <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
   </body>
 </html>
