--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
       <input type="text" placeholder="What is your name?" />
       <input type="submit" value="Log In" />
     </form>
-    <h2 id="clock">00:00</h2>
+    <h2 id="clock">현재 시간이 JavaScript를 통해 이 곳에 표시됩니다.</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <div id="quote">
+      <span></span>
+      <span></span>
+    </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
   </body>
 </html>
