Removed weather feature due to API key issues

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <span></span>
       </div>
   
-      <div id="weather">
+      <!-- div id="weather">
         <span></span>
         <span></span>
-      </div>
+      </div -->
     </main>
 
     <script src="js/greetings.js"></script>
